--- a/src/main/resources/templates/todolist/addTodo.html
+++ b/src/main/resources/templates/todolist/addTodo.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/addTodo.css">
+    <link th:href="@{/css/addTodo.css}"
+          rel="stylesheet" href="../css/addTodo.css">
 </head>
 <body>
     <div class="container">
@@ -17,13 +18,15 @@
             <div class="MessageContainer">
                 <div class="addMessage">새로운 일정을 등록하세요</div>
             </div>
-            <form action="todos.html" method="post">
+            <form action="todos.html" th:action method="post">
                 <div>
-                    <input type="text" name="todoDetail" class="addTodoForm" placeholder="일정을 입력하세요">
+                    <div class="addMessage" th:if="${param.status}"> 일정이 등록되었습니다 </div>
+                    <input type="text" name="todoDetail" class="addTodoForm" placeholder="일정을 입력하세요" th:unless="${param.status}">
                 </div>
                 <div class="buttonContainer">
-                    <button type="submit" class="addTodo"> 일정에 추가하기</button>
-                    <button onclick="location.href='todos.html'" type="button" class="return">돌아가기</button>
+                    <button type="submit" class="addTodo" th:if="${param.status}" disabled>일정에 추가하기</button>
+                    <button type="submit" class="addTodo" th:unless="${param.status}"> 일정에 추가하기</button>
+                    <button onclick="location.href='todos.html'" th:onclick="|location.href='@{/todolist}'|" type="button" class="return">돌아가기</button>
                 </div>
             </form>
         </div>
