feat : add todo Finished

--- a/todo-project/src/main/resources/static/css/addTodo.css
+++ b/todo-project/src/main/resources/static/css/addTodo.css
@@ -124,3 +124,10 @@ a {
 .todoList:hover {
   text-decoration: rgb(213, 231, 213) wavy underline;
 }
+
+.finishedMessage {
+  font-size: 30px;
+  padding-bottom: 10px;
+  text-align: center;
+  min-width: 400px;
+}
