--- a/todo-project/src/main/resources/static/css/todos.css
+++ b/todo-project/src/main/resources/static/css/todos.css
@@ -54,7 +54,7 @@ a {
   width: 200px;
   border-radius: 10px;
   background-color: rgb(173, 230, 230);
-  height: 40px;
+  min-height: 50px;
   font-size: 18px;
   transition: background-color 0.3s;
   box-shadow: 1px 2px 4px 0px rgb(207 202 202);
