--- a/front-end/todolist/src/css/todo.css
+++ b/front-end/todolist/src/css/todo.css
@@ -15,7 +15,7 @@
 }
 
 .buttonContainer {
-  width: 360px;
+  min-width: 360px;
   margin-top: 80px;
   display: flex;
   justify-content: space-between;
